# open-gpias-no-nidaq-card

./: .gitignore  MANIFEST.in  README.md  README.rst  install_requirements_with_conda.py  meta.yaml  pyproject.toml  setup.py
development/: AddCopyright.py  CopyrightNotice.txt  MakeRelease.py  readme_conda.txt
development/nsis_conda/: make.bat  open_gpias_conda.nsi  readme.txt
docs/: assembling_setup.rst  calibration.rst  conf.py  configuration.rst  hardware.rst  index.rst  installation.rst  signal.rst
open_gpias/: ConfigEditor.py  MeasurementPlot.py  SignalEditor.py  SoundcardRecording.py  StimulusBackend.py  StimulusFrontEnd.py  __init__.py  equalizer.py  excel_export.py  gui_helpers.py  mainWindow.py  soundSignal.py  start.bat  start.py
open_gpias/playlist/: BackendPlaylist.py  FrontendPlaylist.py
