[tool.poetry]
name = "opengpias"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
QtAwesome = "^1.1.1"
sounddevice = "^0.4.4"
SoundCard = "^0.4.2"
PyQt5 = "^5.15.7"
appdirs = "^1.4.4"
pandas = "^1.4.3"
PyDAQmx = "^1.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
